Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.1.4
    Fixed a bug where static chance skills like Arcane Salvage were using incorrect calculations for success
    Advanced Salvage now uses a rank system
    Arcane Salvage now goes by your rank to determine the maximum amount of materials salvaged and is no longer percentage based
    Fixed a bug where Iron Arm was checking for Iron Grip to be unlocked instead of itself
    (Plugin Compatibility) mcMMO now ignores cancelled events relating to the player left or right clicking
    (Locale) Changed the string for "Salvage.Ability.Bonus.1" to fit the new material recovery mechanics of Salvage
    (Config) Cleaned up some leftover 'unlocklevel' settings, this stuff is now handled in skillranks.yml
    (Config) Removed Salvage.MaxPercentage
    (Config) Removed Salvage.MaxPercentageChance
    (Config) Added Salvage.ArcaneSalvage.MaxBonusLevel
    (Config) Added Salvage.ArcaneSalvage.MaxChance

Version 2.1.3
    Temporarily removed the unarmed no-item pickup feature until its fixed

Version 2.1.2
    (Compatibility) mcMMO now deals custom damage type for all damage sources to be more compatible with other plugins (such as anti-cheat)
    (Perks) Fixed a bug where the Lucky perk wasn't adding to success
    (Skills) mcMMO will now listen to cancelled events to remove our temporary enchantments from tools
    (Skills) Fixing a bug where Shake didn't calculate success correctly
    (Skills) Fixed a bug where Arcane Forging didn't calculate success and failure correctly
    (Skills) Fixed a bug where Salvage didn't calculate success and failure correctly
    (Skills) Fixed a bug where Flux Mining didn't calculate success correctly
    (Skills) Fixed a bug where Shake didn't calculate correctly
    (Skills) Fixed a bug where Pummel didn't calculate correctly